--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
        <title>1234</title>  
        <link rel="stylesheet" href="style.css"/>
+    </head>
     <body>
         <header>
             <img id ="logo" src="https://mars.algoritmika.org/uploads/2020/12/logo_0_1607675596.svg" height="40px"/>
